# coughkit

./: .gitignore  CHANGELOG.md  README.md  convert_model_to_json.py  count_cough.py  detect_cough.py  pyproject.toml  requirements.txt  segment_cough.py  train_classifier.py
models/: cough_classifier_migrated.json
scripts/: convert_model_to_json.py  train_classifier.py
src/: DSP.py  __init__.py  feature_class.py  segmentation.py
src/coughkit/: __init__.py  __main__.py  audio_io.py  dsp.py  features.py  models.py  segmentation.py
src/coughkit/cli/: __init__.py  common.py  count.py  detect.py  main.py  segment.py
tests/: conftest.py  test_cli.py  test_count_cough.py  test_dsp.py  test_features.py  test_segmentation.py
